# Codeforces

./: CMakeLists.txt
Div3 - 070723/: rudolfandsnowflakes(simple).cpp  rudolphandcuttherope.cpp  rudolphandtheanothercompetition.cpp  rudolphandtictactoe.cpp
Div4 - 070723/: balancedround.cpp  cardboardforpictures.cpp  tenwordsofwisdom.cpp  tomycritics.cpp  wordonthepaper.cpp
